fix: Modify string typo