@@ -17,13 +17,13 @@ import java.util.List;
 public class OrderProducer {
     private final KafkaTemplate<String, String> kafkaTemplate;
 
-    List<Field> fields = List.of(
-            new Field("string,", true, "order_id"),
-            new Field("string,", true, "user_id"),
-            new Field("string,", true, "product_id"),
-            new Field("int32,", true, "qty"),
-            new Field("int32,", true, "unit_price"),
-            new Field("int32,", true, "total_price")
+    List<Field> fields = Arrays.asList(
+            new Field("string", true, "order_id"),
+            new Field("string", true, "user_id"),
+            new Field("string", true, "product_id"),
+            new Field("int32", true, "qty"),
+            new Field("int32", true, "unit_price"),
+            new Field("int32", true, "total_price")
     );
 
     Schema schema = Schema.builder()
